# k8smatters

./: .env  .gitignore  README.md  docker-compose.yml
django/: .env  Dockerfile  entrypoint.sh  pyproject.toml
django/backend/backend/: settings.py  urls.py
django/backend/posts/: models.py  serializers.py  urls.py
django/backend/posts/migrations/: 0001_initial.py
k8s/: config-map.yaml  launch-all.sh  secrets.yaml
k8s/django/: deployment.yaml  job.yaml  service.yaml
k8s/nginx/: ingress.yaml
k8s/postgres/: deployment.yaml  persistent-volume-claim.yaml  service.yaml
k8s/react/: deployment.yaml  service.yaml
nginx/: Dockerfile  nginx.conf
postgres/: .env
react/: .dockerignore  Dockerfile
react/frontend/: package.json  pnpm-lock.yaml
react/frontend/src/: App.tsx  constants.ts
